--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -37,7 +37,7 @@
         cursor: auto;
     }
 
-    .ant-tabs-card > .ant-tabs-content-holder {
+    .ant-tabs-card>.ant-tabs-content-holder {
         border: 0px solid rgba(0, 0, 0, 0.06);
     }
 
@@ -94,11 +94,17 @@
         color: var(--primary);
 
         &:hover {
-            border-radius: 2px;
             color: var(--primary);
+            border-radius: 2px;
         }
     }
 
+    .ant-btn.ant-btn-circle.ant-btn {
+        min-width: 30px;
+        padding-inline-start: 0;
+        padding-inline-end: 0;
+        border-radius: 50%;
+    }
 
     .icon-filter {
         font-size: 14px;
