test filter layer component button control

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -154,10 +154,10 @@
             margin: 0;
             cursor: pointer;
             color: var(--text-secondary);
-            z-index: 1000;
+            // z-index: 1000;
             border-radius: 3px;
             border: none;
-            background-color: none;
+            background: none;
             box-sizing: border-box;
             margin-inline-start: 2px;
 
