--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -70,7 +70,7 @@
         padding: 0;
         display: flex;
         justify-content: space-between;
-        width: 120px
+        width: auto
     }
 
     .op-button-collapse {
