--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -11,6 +11,7 @@
     flex-direction: column;
     background: #fff;
     box-sizing: border-box;
+    border: 1px solid var(--icon-color);
 
     .ant-tabs-content-holder {
         margin-left: 0;
@@ -54,7 +55,7 @@
     }
 
     .ant-card-head {
-        min-height: 30px;
+        min-height: 24px;
         padding: 0;
         font-size: 14px;
     }
@@ -73,25 +74,11 @@
         width: auto
     }
 
-    .op-button-collapse {
-        display: flex;
-        padding: 0;
-        position: relative;
-        top: 0px;
-        width: 30px;
-        height: 30px;
-        background: #fff;
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-        cursor: auto;
-        border-radius: 2px;
-    }
-
     .ant-btn.ant-btn-icon-only {
-        width: 30px;
-        height: 30px;
-        color: var(--primary);
+        width: 24px;
+        height: 24px;
+        color: var(--text-secondary);
+        margin-inline-start: 2px;
 
         &:hover {
             color: var(--primary);
@@ -100,7 +87,7 @@
     }
 
     .ant-btn.ant-btn-circle.ant-btn {
-        min-width: 30px;
+        min-width: 24px;
         padding-inline-start: 0;
         padding-inline-end: 0;
         border-radius: 50%;
@@ -142,12 +129,10 @@
         }
     }
 
-
     .filter-content {
         height: 100%;
         width: 100%;
-        border: 1px solid var(--divider-color);
         box-sizing: border-box;
+        padding: 5px;
     }
-
 }
