--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    border-radius: 2px;
+    border-radius: 3px;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     position: absolute;
     content: "";
@@ -18,7 +18,7 @@
     }
 
     .ant-tabs-nav .ant-tabs-tab {
-        border-radius: 0 !important;
+        border-radius: 3px 3px 0 0 !important;
         padding: 3px 6px !important;
         font-size: 12px !important;
         display: inline-flex;
@@ -34,7 +34,7 @@
     }
 
     .ant-tabs-content-holder {
-        border-radius: 2px;
+        border-radius: 3px;
         cursor: auto;
     }
 
@@ -47,7 +47,7 @@
     }
 
     .ant-card {
-        border-radius: 2px;
+        border-radius: 3px;
     }
 
     .ant-card-bordered {
@@ -82,7 +82,7 @@
 
         &:hover {
             color: var(--primary);
-            border-radius: 2px;
+            border-radius: 3px;
         }
     }
 
@@ -115,7 +115,7 @@
         cursor: pointer;
         color: var(--text-secondary);
         z-index: 1000;
-        border-radius: 2px;
+        border-radius: 3px;
         border: none;
         background-color: none;
         box-sizing: border-box;
@@ -124,7 +124,7 @@
         &:hover {
             background-color: #00000010;
             color: var(--primary);
-            border-radius: 2px;
+            border-radius: 3px;
             border: none;
         }
     }
