--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -134,5 +134,6 @@
         width: 100%;
         box-sizing: border-box;
         padding: 5px;
+        border-top: 1px solid var(--divider-color);
     }
 }
