--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -129,11 +129,94 @@
         }
     }
 
-    .filter-content {
+    .ant-tabs-tabpane {
+        bottom: 34px !important;
+    }
+
+    .component-filter {
         height: 100%;
         width: 100%;
         box-sizing: border-box;
         padding: 5px;
         border-top: 1px solid var(--divider-color);
+
+        .form-filters {
+
+            .field-row {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+                margin: 0;
+
+                .icon-symbol {
+                    font-size: 14px;
+                    width: 32px;
+                    height: 32px;
+                    display: flex;
+                    justify-items: center;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 0 0 auto;
+                    border: 1px solid #d9d9d9;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    box-sizing: border-box;
+
+                    &:hover {
+                        border: 1px solid var(--primary);
+                        border-radius: 3px;
+                    }
+                }
+
+                .padding-icon {
+                    margin: 0 5px 0 0;
+                }
+
+                .title-button {
+                    min-height: 24px;
+                    width: 100%;
+                    display: flex;
+                    padding: 5px 16px;
+                    align-items: center;
+                    cursor: pointer;
+                }
+
+                .card-row {
+                    width: 100%;
+                    margin: 5px;
+
+                    .ant-card-head {
+                        padding: 0;
+                        font-size: 14px;
+                        border-radius: 3px;
+                    }
+
+                    .ant-card-body {
+                        padding: 0;
+                        margin: 0;
+                    }
+
+                    .card-content {
+                        display: flex;
+                        width: 100%;
+                        justify-content: space-between;
+                        align-items: center;
+                        padding: 5px 0px;
+                    }
+                }
+            }
+        }
+    }
+
+    .control-filters {
+        display: flex;
+        justify-content: flex-end;
+        position: fixed;
+        bottom: 0;
+        padding: 5px;
+
+        button {
+            margin: 0 0 0 10px;
+        }
     }
 }
