--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -63,7 +63,6 @@
                 white-space: nowrap;
                 display: flex;
                 align-items: center;
-                justify-content: space-between;
 
                 .legend-title {
                     overflow: hidden;
@@ -176,7 +175,7 @@
 
 .more-grey {
     font-size: 18px;
-    color: var(--text-secondary);
+    color: var(--icon-color);
     width: 24px;
     height: 24px;
     display: flex;
