--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -143,6 +143,12 @@
                 margin: 0 0 10px 0;
                 border-bottom: 1px solid var(--divider-color);
 
+                .field-add {
+                    display: flex;
+                    justify-content: space-between;
+                    padding: 0px 5px 0 8px;
+                }
+
                 .ant-card-head {
                     border: 0px solid;
                     padding: 0;
@@ -150,8 +156,8 @@
 
                 .icon-symbol {
                     font-size: 14px;
-                    width: 32px;
-                    height: 32px;
+                    width: 24px;
+                    height: 24px;
                     display: flex;
                     justify-items: center;
                     justify-content: center;
