--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -162,8 +162,17 @@
                     .field-add {
                         display: flex;
                         justify-content: space-between;
-                        padding: 0px 5px 0 8px;
+                        padding: 3px;
                         font-weight: 500;
+                        box-sizing: border-box;
+                        border: 1px solid transparent;
+
+                        &:hover {
+                            border-radius: 3px;
+                            cursor: pointer;
+                            background: #00000005;
+                            border: 1px solid #d9d9d9;
+                        }
 
                         .title-field {
                             overflow: hidden;
@@ -228,6 +237,36 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
+                .load-values {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+
+                    .title-button {
+                        border: 1px solid var(--divider-color);
+                        padding: 0 5px;
+                        margin: 3px 5px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        display: inline;
+                        font: inherit;
+                        background: none;
+                        width: calc(100% - 10px);
+                        box-sizing: border-box;
+                        cursor: pointer;
+                        border-radius: 3px;
+                        user-select: none;
+
+                        &:hover {
+                            border-radius: 3px;
+                            cursor: move;
+                            background: #00000005;
+                            border: 1px solid #d9d9d9;
+                        }
+                    }
+                }
             }
         }
     }
