--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -11,7 +11,6 @@
     flex-direction: column;
     background: #fff;
     box-sizing: border-box;
-    border: 1px solid var(--icon-color);
 
     .ant-tabs-content-holder {
         margin-left: 0;
@@ -123,14 +122,21 @@
         }
     }
 
-    .ant-tabs-tabpane {
-        bottom: 34px !important;
-    }
-
     .ant-card .ant-card-head {
         border: 0px solid;
         padding: 0;
         min-height: 32px;
+    }
+
+    .ant-card-actions {
+        width: 35%;
+        position: fixed;
+        bottom: 34px;
+        height: 30px;
+        right: 0;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
 
     .component-filter {
@@ -145,12 +151,17 @@
             margin: 2px;
 
             .card-filter-fields {
-                border: 1px solid var(--divider-color);
                 width: 65%;
-                margin: 2px;
+                margin: 0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                position: fixed;
+                top: 26px;
+                left: 0px;
+                overflow: auto;
+                height: calc(100% - 60px);
+                box-sizing: border-box;
 
                 .field-row {
                     display: flex;
@@ -169,9 +180,7 @@
 
                         &:hover {
                             border-radius: 3px;
-                            cursor: pointer;
                             background: #00000005;
-                            border: 1px solid #d9d9d9;
                         }
 
                         .title-field {
@@ -231,12 +240,28 @@
             }
 
             .value-filter-fields {
-                border: 1px solid var(--divider-color);
                 width: 35%;
-                margin: 2px;
+                margin: 0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                position: fixed;
+                top: 58px;
+                right: 0px;
+                overflow: auto;
+                height: calc(100% - 122px);
+                box-sizing: border-box;
+
+                .ant-card-head {
+                    border: 0px solid;
+                    padding: 0;
+                    min-height: 32px;
+                    position: fixed;
+                    right: 0;
+                    width: 35%;
+                    top: 26px;
+                    text-align: center;
+                }
 
                 .load-values {
                     display: flex;
@@ -244,7 +269,7 @@
                     align-items: flex-start;
 
                     .title-button {
-                        border: 1px solid var(--divider-color);
+                        // border: 1px solid var(--divider-color);
                         padding: 0 5px;
                         margin: 3px 5px;
                         overflow: hidden;
@@ -255,15 +280,15 @@
                         background: none;
                         width: calc(100% - 10px);
                         box-sizing: border-box;
-                        cursor: pointer;
+                        // cursor: pointer;
                         border-radius: 3px;
-                        user-select: none;
+                        // user-select: none;
 
                         &:hover {
-                            border-radius: 3px;
-                            cursor: move;
-                            background: #00000005;
-                            border: 1px solid #d9d9d9;
+                            // border-radius: 3px;
+                            // cursor: move;
+                            background: #00000010;
+                            // border: 1px solid #d9d9d9;
                         }
                     }
                 }
