search field to filter data

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -126,6 +126,8 @@
         border: 0px solid;
         padding: 0;
         min-height: 32px;
+        font-weight: 500;
+        font-size: 14px;
     }
 
     .ant-card-actions {
@@ -137,6 +139,10 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+    }
+
+    .ant-table-wrapper .ant-table-thead>tr>th {
+        font-weight: 400;
     }
 
     .component-filter {
@@ -174,7 +180,7 @@
                         display: flex;
                         justify-content: space-between;
                         padding: 3px;
-                        font-weight: 500;
+                        font-weight: 400;
                         box-sizing: border-box;
                         border: 1px solid transparent;
 
