--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -2,8 +2,7 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    border-radius: 3px;
-    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+    border-radius: 4px;
     position: absolute;
     content: "";
     display: flex;
@@ -13,11 +12,12 @@
     box-sizing: border-box;
 
     .ant-tabs-content-holder {
+        cursor: auto;
         margin-left: 0;
     }
 
     .ant-tabs-nav .ant-tabs-tab {
-        border-radius: 3px 3px 0 0 !important;
+        border-radius: 4px 4px 0 0 !important;
         padding: 3px 6px !important;
         font-size: 12px !important;
         display: inline-flex;
@@ -28,36 +28,13 @@
         border-left: none;
     }
 
-    .ant-tabs-card>.ant-tabs-nav {
-        align-items: flex-start;
-    }
-
     .ant-tabs-content-holder {
-        border-radius: 3px;
+        border-radius: 4px;
         cursor: auto;
-    }
-
-    .ant-tabs-card>.ant-tabs-content-holder {
-        border: 0px solid rgba(0, 0, 0, 0.06);
     }
 
     .ant-tabs-nav {
         min-width: 0;
-    }
-
-    .ant-card {
-        border-radius: 3px;
-    }
-
-    .ant-card-bordered {
-        border: 0px solid #f0f0f0;
-    }
-
-    .ant-card-body {
-        padding: 0;
-        height: 100%;
-        position: relative;
-        width: 100%;
     }
 
     .op-button {
@@ -75,7 +52,7 @@
 
         &:hover {
             color: var(--primary);
-            border-radius: 3px;
+            border-radius: 4px;
         }
     }
 
@@ -108,7 +85,7 @@
         cursor: pointer;
         color: var(--text-secondary);
         z-index: 1000;
-        border-radius: 3px;
+        border-radius: 4px;
         border: none;
         background-color: none;
         box-sizing: border-box;
@@ -117,24 +94,9 @@
         &:hover {
             background-color: #00000010;
             color: var(--primary);
-            border-radius: 3px;
+            border-radius: 4px;
             border: none;
         }
-    }
-
-    .ant-card-actions {
-        width: 35%;
-        position: fixed;
-        bottom: 34px;
-        height: 30px;
-        right: 0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-
-    .ant-table-wrapper .ant-table-thead>tr>th {
-        font-weight: 400;
     }
 
     .component-filter {
@@ -142,170 +104,405 @@
         width: 100%;
         box-sizing: border-box;
         border-top: 1px solid var(--divider-color);
-
-        .form-filters {
-            display: flex;
-            justify-content: space-between;
-            margin: 2px;
-
-            .card-filter-fields {
-                width: 65%;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                position: fixed;
-                top: 51px;
-                left: 0px;
-                overflow: auto;
-                height: calc(100% - 114px);
-                box-sizing: border-box;
-
-                .ant-card-head {
-                    border: 0px solid;
-                    border-radius: 0px;
-                    padding: 0;
-                    min-height: 24px;
-                    position: fixed;
-                    left: 0;
-                    width: 65%;
-                    top: 25px;
-                    text-align: center;
-                    font-weight: 400;
-                }
-
-                .field-row {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: flex-end;
-                    margin: 0 0 10px 0;
-                    border-bottom: 1px solid var(--divider-color);
-
-                    .ant-card-head {
-                        position: initial;
-                        width: 100%;
-                        padding: 0 0 0 8px;
-                    }
-
-                    .field-add {
-                        display: flex;
-                        justify-content: space-between;
-                        padding: 3px;
-                        font-weight: 400;
-                        box-sizing: border-box;
-                        border: 1px solid transparent;
-
-                        &:hover {
-                            border-radius: 3px;
-                            background: #00000005;
-                        }
-
-                        .title-field {
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            white-space: nowrap;
-                            padding: 0 10px 0 0;
-                        }
-                    }
-
-                    .icon-symbol {
-                        font-size: 14px;
-                        width: 24px;
-                        height: 24px;
-                        display: flex;
-                        justify-items: center;
-                        justify-content: center;
-                        align-items: center;
-                        flex: 0 0 auto;
-                        border: 1px solid #d9d9d9;
-                        border-radius: 3px;
-                        cursor: pointer;
-                        box-sizing: border-box;
-
-                        &:hover {
-                            border: 1px solid var(--primary);
-                            border-radius: 3px;
-                        }
-                    }
-
-                    .padding-icon {
-                        margin: 0 5px 0 0;
-                    }
-
-                    .title-button {
-                        padding: 2px;
-                        cursor: pointer;
-                    }
-
-                    .card-row {
-                        width: 100%;
-
-                        .card-content {
-                            display: flex;
-                            width: 100%;
-                            justify-content: space-between;
-                            align-items: center;
-                            padding: 5px 0px;
-                        }
-                    }
-                }
-            }
-
-            .value-filter-fields {
-                width: 35%;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                position: fixed;
-                top: 51px;
-                right: 0px;
-                overflow: auto;
-                height: calc(100% - 114px);
-                box-sizing: border-box;
-                border: 0px solid;
-
-                .ant-card-head {
-                    border: 0px solid;
-                    border-radius: 0px;
-                    padding: 0;
-                    min-height: 24px;
-                    position: fixed;
-                    right: 0;
-                    width: 35%;
-                    top: 25px;
-                    text-align: center;
-                    font-weight: 400;
-                }
-                .ant-card-actions>li:not(:last-child) {
-                    border-inline-end: 0px solid #f0f0f0;
-                }
-                .load-content {
-                    padding: 5px;
-
-                    .item-load {
-
-                        &:hover {
-                            cursor: pointer;
-                            border-radius: 3px;
-                            background: #00000005;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    .control-filters {
         display: flex;
-        justify-content: flex-end;
-        position: fixed;
-        bottom: 0;
-        padding: 5px;
-        right: 0;
 
-        button {
-            margin: 0 0 0 10px;
+        .title-field {
+            position: fixed;
+            top: 24px;
+            left: 0;
+            right: 0;
+            text-align: center;
+            border-bottom: 1px solid var(--divider-color);
         }
+
+        .fields-block {
+            position: fixed;
+            top: 48px;
+            bottom: 32px;
+            left: 0;
+            right: 0;
+            border-bottom: 1px solid var(--divider-color);
+
+            .field-items {
+                height: 100%;
+                overflow: auto;
+                display: flex;
+                flex-direction: column;
+
+                .item-field {
+                    padding: 5px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    .ant-card {
+                        box-sizing: border-box;
+                        font-size: 14px;
+                        border-radius: 4px;
+                    }
+
+                    .card-block {
+                        width: 100%;
+
+                        .ant-card-head {
+                            position: initial;
+                            width: 100%;
+                            padding: 4px;
+                            min-height: 32px;
+                            font-weight: 400;
+                            font-size: 14px;
+                        }
+
+                        .ant-card-body {
+                            padding: 4px;
+                        }
+                    }
+                }
+            }
+
+            .divider-item {
+                height: 100%;
+                margin-inline: 0;
+                flex: 0;
+            }
+        }
+
+        .control-filter {
+            position: fixed;
+            bottom: 0px;
+            right: 0;
+            padding: 0 4px 4px 0px;
+
+            button {
+                margin: 0 0 0 10px;
+            }
+        }
+
+        //     .control-filters {
+        //         display: flex;
+        //         justify-content: flex-end;
+        //         position: fixed;
+        //         bottom: 0;
+        //         padding: 5px;
+        //         right: 0;
+
+        //         button {
+        //             margin: 0 0 0 10px;
+        //         }
+        //     }
+
+
     }
 }
+
+// .ngw-filter-layer {
+//     width: 100%;
+//     height: 100%;
+//     justify-content: space-between;
+//     border-radius: 3px;
+//     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+//     position: absolute;
+//     content: "";
+//     display: flex;
+//     clear: both;
+//     flex-direction: column;
+//     background: #fff;
+//     box-sizing: border-box;
+
+// .ant-tabs-content-holder {
+//     margin-left: 0;
+// }
+
+// .ant-tabs-nav .ant-tabs-tab {
+//     border-radius: 3px 3px 0 0 !important;
+//     padding: 3px 6px !important;
+//     font-size: 12px !important;
+//     display: inline-flex;
+//     justify-content: space-between;
+//     border-right: 1px solid var(--divider-color);
+//     border-top: none;
+//     border-bottom: none;
+//     border-left: none;
+// }
+
+// .ant-tabs-card>.ant-tabs-nav {
+//     align-items: flex-start;
+// }
+
+// .ant-tabs-content-holder {
+//     border-radius: 3px;
+//     cursor: auto;
+// }
+
+// .ant-tabs-card>.ant-tabs-content-holder {
+//     border: 0px solid rgba(0, 0, 0, 0.06);
+// }
+
+// .ant-tabs-nav {
+//     min-width: 0;
+// }
+
+//     .ant-card {
+//         border-radius: 3px;
+//     }
+
+//     .ant-card-bordered {
+//         border: 0px solid #f0f0f0;
+//     }
+
+//     .ant-card-body {
+//         padding: 0;
+//         height: 100%;
+//         position: relative;
+//         width: 100%;
+//     }
+
+//     .op-button {
+//         padding: 0;
+//         display: flex;
+//         justify-content: space-between;
+//         width: auto
+//     }
+
+//     .ant-btn.ant-btn-icon-only {
+//         width: 24px;
+//         height: 24px;
+//         color: var(--text-secondary);
+//         margin-inline-start: 2px;
+
+//         &:hover {
+//             color: var(--primary);
+//             border-radius: 3px;
+//         }
+//     }
+
+//     .ant-btn.ant-btn-circle.ant-btn {
+//         min-width: 24px;
+//         padding-inline-start: 0;
+//         padding-inline-end: 0;
+//         border-radius: 50%;
+//     }
+
+//     .icon-filter {
+//         font-size: 14px;
+//         width: 24px;
+//         height: 24px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//     }
+
+//     .icon-symbol {
+//         font-size: 14px;
+//         width: 24px;
+//         height: 24px;
+//         display: flex;
+//         justify-items: center;
+//         justify-content: center;
+//         align-items: center;
+//         flex: 0 0 auto;
+//         margin: 0;
+//         cursor: pointer;
+//         color: var(--text-secondary);
+//         z-index: 1000;
+//         border-radius: 3px;
+//         border: none;
+//         background-color: none;
+//         box-sizing: border-box;
+//         margin-inline-start: 2px;
+
+//         &:hover {
+//             background-color: #00000010;
+//             color: var(--primary);
+//             border-radius: 3px;
+//             border: none;
+//         }
+//     }
+
+//     .ant-card-actions {
+//         width: 35%;
+//         position: fixed;
+//         bottom: 34px;
+//         height: 30px;
+//         right: 0;
+//         display: flex;
+//         justify-content: space-evenly;
+//         align-items: center;
+//     }
+
+//     .ant-table-wrapper .ant-table-thead>tr>th {
+//         font-weight: 400;
+//     }
+
+//     .component-filter {
+//         height: 100%;
+//         width: 100%;
+//         box-sizing: border-box;
+//         border-top: 1px solid var(--divider-color);
+
+//         .form-filters {
+//             display: flex;
+//             justify-content: space-between;
+//             margin: 2px;
+
+//             .card-filter-fields {
+// width: 65%;
+// margin: 0;
+// display: flex;
+// flex-direction: column;
+// align-items: center;
+// position: fixed;
+// top: 51px;
+// left: 0px;
+// overflow: auto;
+// height: calc(100% - 114px);
+// box-sizing: border-box;
+
+//                 .ant-card-head {
+//                     border: 0px solid;
+//                     border-radius: 0px;
+//                     padding: 0;
+//                     min-height: 24px;
+//                     position: fixed;
+//                     left: 0;
+//                     width: 65%;
+//                     top: 25px;
+//                     text-align: center;
+//                     font-weight: 400;
+//                 }
+
+//                 .field-row {
+//                     display: flex;
+//                     justify-content: space-between;
+//                     align-items: flex-end;
+//                     margin: 0 0 10px 0;
+//                     border-bottom: 1px solid var(--divider-color);
+
+//                     .ant-card-head {
+//                         position: initial;
+//                         width: 100%;
+//                         padding: 0 0 0 8px;
+//                     }
+
+//                     .field-add {
+//                         display: flex;
+//                         justify-content: space-between;
+//                         padding: 3px;
+//                         font-weight: 400;
+//                         box-sizing: border-box;
+//                         border: 1px solid transparent;
+
+//                         &:hover {
+//                             border-radius: 3px;
+//                             background: #00000005;
+//                         }
+
+//                         .title-field {
+//                             overflow: hidden;
+//                             text-overflow: ellipsis;
+//                             white-space: nowrap;
+//                             padding: 0 10px 0 0;
+//                         }
+//                     }
+
+//                     .icon-symbol {
+//                         font-size: 14px;
+//                         width: 24px;
+//                         height: 24px;
+//                         display: flex;
+//                         justify-items: center;
+//                         justify-content: center;
+//                         align-items: center;
+//                         flex: 0 0 auto;
+//                         border: 1px solid #d9d9d9;
+//                         border-radius: 3px;
+//                         cursor: pointer;
+//                         box-sizing: border-box;
+
+//                         &:hover {
+//                             border: 1px solid var(--primary);
+//                             border-radius: 3px;
+//                         }
+//                     }
+
+//                     .padding-icon {
+//                         margin: 0 5px 0 0;
+//                     }
+
+//                     .title-button {
+//                         padding: 2px;
+//                         cursor: pointer;
+//                     }
+
+//                     .card-row {
+//                         width: 100%;
+
+//                         .card-content {
+//                             display: flex;
+//                             width: 100%;
+//                             justify-content: space-between;
+//                             align-items: center;
+//                             padding: 5px 0px;
+//                         }
+//                     }
+//                 }
+//             }
+
+//             .value-filter-fields {
+// width: 35%;
+// margin: 0;
+// display: flex;
+// flex-direction: column;
+// align-items: center;
+// position: fixed;
+// top: 51px;
+// right: 0px;
+// overflow: auto;
+// height: calc(100% - 114px);
+// box-sizing: border-box;
+// border: 0px solid;
+
+//                 .ant-card-head {
+//                     border: 0px solid;
+//                     border-radius: 0px;
+//                     padding: 0;
+//                     min-height: 24px;
+//                     position: fixed;
+//                     right: 0;
+//                     width: 35%;
+//                     top: 25px;
+//                     text-align: center;
+//                     font-weight: 400;
+//                 }
+//                 .ant-card-actions>li:not(:last-child) {
+//                     border-inline-end: 0px solid #f0f0f0;
+//                 }
+//                 .load-content {
+//                     padding: 5px;
+
+//                     .item-load {
+
+//                         &:hover {
+//                             cursor: pointer;
+//                             border-radius: 3px;
+//                             background: #00000005;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+
+//     .control-filters {
+//         display: flex;
+//         justify-content: flex-end;
+//         position: fixed;
+//         bottom: 0;
+//         padding: 5px;
+//         right: 0;
+
+//         button {
+//             margin: 0 0 0 10px;
+//         }
+//     }
+// }
