remove filter by field

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -156,6 +156,10 @@
                         .ant-card-body {
                             padding: 4px;
                         }
+
+                        .child-item {
+                            cursor: pointer;
+                        }
                     }
                 }
             }
