remove filter by field, icon click

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -159,6 +159,9 @@
 
                         .child-item {
                             cursor: pointer;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
                         }
                     }
                 }
