add or remove field update

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -125,7 +125,7 @@
 
             .field-items {
                 height: 100%;
-                overflow: auto;
+                overflow-y: scroll;
                 display: flex;
                 flex-direction: column;
 
@@ -158,7 +158,6 @@
                         }
 
                         .child-item {
-                            cursor: pointer;
                             display: flex;
                             justify-content: space-between;
                             align-items: center;
