--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -208,6 +208,11 @@
                             justify-content: space-between;
                             align-items: center;
                             padding: 4px 4px 4px 0;
+
+                            .item-control {
+                                display: inline-flex;
+                                align-items: center;
+                            }
                         }
                     }
                 }
