--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -12,23 +12,6 @@
     box-sizing: border-box;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 
-    ::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
-        background-color: var(--divider-color);
-    }
-
-    ::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        background-color: var(--icon-color);
-    }
-
-    ::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        background-color: #f9f9fd;
-    }
-
     .ant-tabs-content-holder {
         cursor: auto;
         margin-left: 0;
@@ -129,7 +112,7 @@
 
     .button-filter {
         button {
-            margin: 0 0px 0px 4px;
+            margin: 0 4px;
         }
     }
 
@@ -205,10 +188,12 @@
                     scrollbar-gutter: stable both-edges;
 
                     .item-field {
-                        padding: 0;
+                        margin: 4px 0;
                         display: flex;
                         align-items: center;
                         justify-content: space-between;
+                        border: 1px solid var(--divider-color);
+                        border-radius: 3px;
 
                         .ant-card {
                             box-sizing: border-box;
@@ -222,11 +207,10 @@
                             .ant-card-head {
                                 position: initial;
                                 width: 100%;
-                                padding: 4px 4px 4px 4px;
+                                padding: 4px 8px 4px 4px;
                                 min-height: 32px;
                                 font-weight: 400;
                                 font-size: 14px;
-                                border-bottom: 0px solid;
                             }
 
                             .ant-card-body {
@@ -237,17 +221,18 @@
                                 display: flex;
                                 justify-content: space-between;
                                 align-items: center;
-                                padding: 6px 4px;
+                                padding: 5px 5px;
 
                                 &:hover {
                                     background: #00000005;
-                                    border-radius: 3px;
+                                    border-radius: 5px;
                                 }
 
                                 .item-control {
                                     display: inline-flex;
                                     align-items: center;
                                     width: 100%;
+                                    justify-content: space-between;
                                 }
                             }
                         }
@@ -291,6 +276,11 @@
                                 background: #00000005;
                                 border-radius: 3px;
                             }
+                        }
+
+                        .item-disable-load {
+                            user-select: none;
+                            color: var(--text-secondary)
                         }
                     }
                 }
