--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -193,7 +193,7 @@
                         align-items: center;
                         justify-content: space-between;
                         border: 1px solid var(--divider-color);
-                        border-radius: 3px;
+                        border-radius: 4px;
 
                         .ant-card {
                             box-sizing: border-box;
@@ -211,6 +211,9 @@
                                 min-height: 32px;
                                 font-weight: 400;
                                 font-size: 14px;
+                                border-radius: 4px 4px 0 0;
+                                background-color: #00000005;
+                                border-bottom: 0px solid;
                             }
 
                             .ant-card-body {
