change style css filter layer, identify module

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -11,6 +11,7 @@
     background: #fff;
     box-sizing: border-box;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+    border: 1px solid rgb(179 185 190 / 70%);
 
     .ant-tabs-content-holder {
         cursor: auto;
@@ -133,8 +134,6 @@
         }
     }
 
-
-
     .component-filter {
         height: 100%;
         width: 100%;
@@ -188,12 +187,12 @@
                     scrollbar-gutter: stable both-edges;
 
                     .item-field {
-                        margin: 4px 0;
+                        margin: 7px 0;
                         display: flex;
                         align-items: center;
                         justify-content: space-between;
-                        border: 1px solid var(--divider-color);
                         border-radius: 4px;
+                        border: 1px solid #d9d9d9;
 
                         .ant-card {
                             box-sizing: border-box;
@@ -255,7 +254,7 @@
 
                     .load-search {
                         position: absolute;
-                        top: 4px;
+                        top: 7px;
                         right: 4px;
                         left: 4px;
                         width: auto;
@@ -263,8 +262,8 @@
 
                     .content {
                         position: absolute;
-                        top: 30px;
-                        right: 0px;
+                        top: 31px;
+                        right: 4px;
                         left: 4px;
                         bottom: 60px;
                         width: auto;
