--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -113,7 +113,7 @@
     clear: both;
     flex-direction: column;
     background: #fff;
-    border: 1px solid var(--icon-color);
+    border: 1px solid rgb(179 185 190 / 70%);
     box-sizing: border-box;
 
     .title {
