--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -266,6 +266,9 @@
                         .item-load {
                             user-select: none;
                             padding: 0 4px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
 
                             &:hover {
                                 cursor: pointer;
