test filter layer load value

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -254,13 +254,12 @@
 
                     .content {
                         position: absolute;
-                        top: 34px;
-                        right: 0px;
-                        left: 4px;
-                        bottom: 60px;
+                        top: 0;
+                        right: 0;
+                        left: 0;
+                        bottom: 0;
                         width: auto;
-                        overflow: overlay;
-                        scrollbar-gutter: stable;
+                        height: 100%;
 
                         .item-load {
                             padding: 0 4px;
@@ -279,6 +278,7 @@
                             color: var(--text-secondary)
                         }
                     }
+
                 }
 
                 .load-button {
