test filter layer, use table layer

--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -235,7 +235,7 @@
             }
 
             .value-loads {
-                width: 35%;
+                width: calc(100% - 62%);
                 position: relative;
                 display: flex;
                 flex-direction: column;
@@ -243,6 +243,8 @@
 
                 .load-content {
                     padding: 0;
+                    width: 100%;
+                    height: calc(100% - 60px);
 
                     .load-search {
                         position: absolute;
