--- a/nextgisweb/webmap/nodepkg/panel/header/PanelHeader.less
+++ b/nextgisweb/webmap/nodepkg/panel/header/PanelHeader.less
@@ -20,6 +20,9 @@
 }
 
 .alert-desc {
-    background: var(--divider-color);
-    border: 1px solid var(--divider-color);
+    background: none;
+    border: none;
+    display: flex;
+    align-items: flex-end;
+    border-radius: 0px;
 }
